add code HW_DJ03

--- a/HW_DJ02/main/templates/main/menu.html
+++ b/HW_DJ02/main/templates/main/menu.html
@@ -9,6 +9,6 @@
                     <a class="nav-link" href="{% url 'third' %}">Третья страница</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'fourth' %}">Четвертая страница</a>
+                    <a class="nav-link" href="{% url 'news_home' %}">Новости</a>
                 </li>
 </ul>
