--- a/HW_DJ02/main/templates/main/menu.html
+++ b/HW_DJ02/main/templates/main/menu.html
@@ -6,7 +6,7 @@
                     <a class="nav-link" href="{% url 'second' %}">Вторая страница</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'third' %}">Третья страница</a>
+                    <a class="nav-link" href="{% url 'add_news' %}">Добавление новости</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'news_home' %}">Новости</a>
